--- a/submission.html
+++ b/submission.html
@@ -31,10 +31,10 @@
                     <div class="dropdown">
                         <input id="submit-groupname-input" class="group-name-input submit-input form-item-submit" type="text" name="group-name" placeholder="Select Team"/>
                         <div id="dropdown_list" class="dropdown_list">
-                            <div class="dropdown_item" data-value="t1">ababa</div>
-                            <div class="dropdown_item" data-value="t2">tea two</div>
-                            <div class="dropdown_item" data-value="t3">Tem 3</div>
-                            <div class="dropdown_item" data-value="t4">Tem 4</div>
+                            <div class="dropdown_item" data-value="t1">Team 1</div>
+                            <div class="dropdown_item" data-value="t2">Team 2</div>
+                            <div class="dropdown_item" data-value="t3">Team 3</div>
+                            <div class="dropdown_item" data-value="t4">Team 4</div>
                         </div>
                     </div>
                 </div>
