--- a/index.html
+++ b/index.html
@@ -373,7 +373,10 @@
               <img src="assets\images\maxis.png" />
             </div>
             <div class="item itemRight item5">
-              <img src="assets\images\NationGate.png"/>
+              <img src="assets\images\balaenaquant.png"/>
+            </div>
+            <div class="item itemRight item6">
+              <img src="assets\images\securitiescommission.jpeg"/>
             </div>
           </div>
         
@@ -661,7 +664,7 @@
      <!--=================== 
         JUDGE Section 
         =================== -->
-    <section id="judge&mentor" class="judge_mentor">
+    <!-- <section id="judge&mentor" class="judge_mentor">
       <div container>
       <div class="col-md-8 col-sm-11 text-center mx-auto">
         <div class="section-title mb-5">
@@ -694,7 +697,7 @@
             </div> 
         </div>
       </div>
-      </section>
+      </section> -->
 
       <!--=================== 
         MENTOR Section 
