Can add group names from Firestore Database

--- a/submission.html
+++ b/submission.html
@@ -31,6 +31,7 @@
                     <div class="dropdown">
                         <input id="submit-groupname-input" class="group-name-input submit-input form-item-submit" type="text" name="group-name" placeholder="Select Team"/>
                         <div id="dropdown_list" class="dropdown_list">
+                            <!-- Can also add team name from firestore database -->
                             <div class="dropdown_item" data-value="t1">Team 1</div>
                             <div class="dropdown_item" data-value="t2">Team 2</div>
                             <div class="dropdown_item" data-value="t3">Team 3</div>
