added nationgate as platinum sponsor

--- a/index.html
+++ b/index.html
@@ -373,10 +373,7 @@
               <img src="assets\images\maxis.png" />
             </div>
             <div class="item itemRight item5">
-              <img src="assets\images\balaenaquant.png"/>
-            </div>
-            <div class="item itemRight item6">
-              <img src="assets\images\securitiescommission.jpeg"/>
+              <img src="assets\images\NationGate.jpg"/>
             </div>
           </div>
         
