judges mentors update

--- a/judges.html
+++ b/judges.html
@@ -76,134 +76,179 @@
           </h2>
         </div>
       </div>
-      <div class="judges">
-        <div class="judge">
-          <div class="judge-image">
-              <img src="./assets/images/judge-placeholder.svg" class="judge-background" alt="Judge">
-              <img src="./assets/images/balaena-liana.png" class="judge-profile" alt="Judge">
+
+        <!-- ======================================= Balaena Quant ====================================-->
+        <div class="judges">
+          <div class="judge">
+            <div class="judge-image">
+                <img src="./assets/images/judge-placeholder.svg" class="judge-background" alt="Judge">
+                <img src="./assets/images/balaena-liana.png" class="judge-profile" alt="Judge">
+            </div>
+            <div class="judge-info">
+                <h3 class="judge-name">Liana Ling</h3>
+                <p>Head of Balaena Quant's Algorithmic Trading Campus<br>017-280 1215</p>
+            </div>
+          </div>      
+          <div class="judge">
+            <div class="judge-image">
+                <img src="./assets/images/judge-placeholder.svg" class="judge-background" alt="Judge">
+                <img src="./assets/images/balaena-marcuslee.png" class="judge-profile" alt="Judge">
+            </div>
+            <div class="judge-info">
+                <h3 class="judge-name">Marcus Lee</h3>
+                <p>Head of the Department of Quantitative Development<br>016 306 6883</p>
+            </div>
           </div>
-          <div class="judge-info">
-              <h3 class="judge-name">Liana Ling</h3>
-              <p>Head of Balaena Quant's Algorithmic Trading Campus<br>+6017-280 1215</p>
-          </div>
-        </div>      
-        <div class="judge">
-          <div class="judge-image">
-              <img src="./assets/images/judge-placeholder.svg" class="judge-background" alt="Judge">
-              <img src="./assets/images/balaena-marcuslee.png" class="judge-profile" alt="Judge">
-          </div>
-          <div class="judge-info">
-              <h3 class="judge-name">Marcus Lee</h3>
-              <p>Head of the Department of Quantitative Development<br>+6016 306 6883</p>
-          </div>
-        </div>
-        <div class="judge">
-          <div class="judge-image">
-              <img src="./assets/images/judge-placeholder.svg" class="judge-background" alt="Judge">
-              <img src="./assets/images/balaena-ngjunhan.png" class="judge-profile" alt="Judge">
-          </div>
-          <div class="judge-info">
-              <h3 class="judge-name">Ng Jun Han</h3>
-              <p>Researcher for Machine Learning in Alpha Development<br>+6011 6290 1803</p>
-          </div>
-        </div>
-      </div>
-      <!-- <div class="judges">
-        <div class="judge">
-          <div class="judge-image">
-              <img src="./assets/images/judge-placeholder.svg" class="judge-background" alt="Judge">
-              <img src="./assets/images/balaena-liana.png" class="judge-profile" alt="Judge">
-          </div>
-          <div class="judge-info">
-              <h3 class="judge-name">Liana Ling</h3>
-              <p>Head of Balaena Quant's Algorithmic Trading Campus<br>+6017-280 1215</p>
-          </div>
-        </div>      
-        <div class="judge">
-          <div class="judge-image">
-              <img src="./assets/images/judge-placeholder.svg" class="judge-background" alt="Judge">
-              <img src="./assets/images/balaena-marcuslee.png" class="judge-profile" alt="Judge">
-          </div>
-          <div class="judge-info">
-              <h3 class="judge-name">Liana Ling</h3>
-              <p>Head of the Department of Quantitative Development<br>+6016 306 6883</p>
+          <div class="judge">
+            <div class="judge-image">
+                <img src="./assets/images/judge-placeholder.svg" class="judge-background" alt="Judge">
+                <img src="./assets/images/balaena-ngjunhan.png" class="judge-profile" alt="Judge">
+            </div>
+            <div class="judge-info">
+                <h3 class="judge-name">Ng Jun Han</h3>
+                <p>Researcher for Machine Learning in Alpha Development<br>011 6290 1803</p>
+            </div>
           </div>
         </div>
-        <div class="judge">
-          <div class="judge-image">
-              <img src="./assets/images/judge-placeholder.svg" class="judge-background" alt="Judge">
-              <img src="./assets/images/balaena-ngjunhan.png" class="judge-profile" alt="Judge">
+
+        <!-- =============================== Securities Commission Malaysia ===========================-->
+        <!-- <div class="judges">
+          <div class="judge">
+            <div class="judge-image">
+                <img src="./assets/images/judge-placeholder.svg" class="judge-background" alt="Judge">
+                <!-- <img src="./assets/images/balaena-liana.png" class="judge-profile" alt="Judge"> --
+            </div>
+            <div class="judge-info">
+                <h3 class="judge-name">Mohamad Farook Naveer Mohideen</h3>
+                <p>Islamic finance, Capital Market & Fintech<br>019-373 1672</p>
+            </div>
+          </div>      
+          <div class="judge">
+            <div class="judge-image">
+                <img src="./assets/images/judge-placeholder.svg" class="judge-background" alt="Judge">
+                <!-- <img src="./assets/images/balaena-marcuslee.png" class="judge-profile" alt="Judge"> --
+            </div>
+            <div class="judge-info">
+                <h3 class="judge-name">Nur Diyana Najwa Binti Mohd Affendi</h3>
+                <p>Islamic Finance & Fintech <br>013-4888941</p>
+            </div>
           </div>
-          <div class="judge-info">
-              <h3 class="judge-name">Ng Jun Han</h3>
-              <p>Researcher for Machine Learning in Alpha Development<br>+6011 6290 1803</p>
+          <div class="judge">
+            <div class="judge-image">
+                <img src="./assets/images/judge-placeholder.svg" class="judge-background" alt="Judge">
+                <!-- <img src="./assets/images/balaena-ngjunhan.png" class="judge-profile" alt="Judge"> --
+            </div>
+            <div class="judge-info">
+                <h3 class="judge-name">Norlia Mat Saed</h3>
+                <p>Shariah & Islamic Finance<br>012-288 5019</p>
+            </div>
+          </div> 
+        </div> -->
+
+        <!-- ========================================== Etiqa =========================================-->
+        <div class="judges">
+      <div class="judge">
+        <div class="judge-image">
+            <img src="./assets/images/judge-placeholder.svg" class="judge-background" alt="Judge">
+            <img src="./assets/images/etiqa-Tan Wey Yang.jpg" class="judge-profile" alt="Judge">
+        </div>
+        <div class="judge-info">
+            <h3 class="judge-name">Tan Wey Yang</h3>
+            <p>Tech Lead DotNet Dev<br>016-3132316</p>
+        </div>
+      </div>      
+      <div class="judge">
+        <div class="judge-image">
+            <img src="./assets/images/judge-placeholder.svg" class="judge-background" alt="Judge">
+            <img src="./assets/images/etiqa-Huzaifah Bin Dzulkifli.jpeg" class="judge-profile" alt="Judge">
+        </div>
+        <div class="judge-info">
+            <h3 class="judge-name">Huzaifah Bin Dzulkifli</h3>
+            <p>Tech Lead DotNet Dev<br>016-5043781</p>
+        </div>
+      </div>
+      <div class="judge">
+        <div class="judge-image">
+            <img src="./assets/images/judge-placeholder.svg" class="judge-background" alt="Judge">
+            <img src="./assets/images/etiqa-Loo Kean Seng.png" class="judge-profile" alt="Judge">
+        </div>
+        <div class="judge-info">
+            <h3 class="judge-name">Loo Kean Seng</h3>
+            <p>Tech Lead Java Dev<br>012-4399278</p>
+        </div>
+      </div>
+        </div>
+
+        <!-- ========================================== Maxis =========================================-->
+        <!-- <div class="judges">
+          <div class="judge">
+            <div class="judge-image">
+                <img src="./assets/images/judge-placeholder.svg" class="judge-background" alt="Judge">
+                <!-- <img src="./assets/images/profile.png" class="judge-profile" alt="Judge"> --
+            </div>
+            <div class="judge-info">
+                <h3 class="judge-name">Mohammad Tariq Hussain</h3>
+                <p>Head of Machine Learning & Artificial Intelligence<br>014-6694270</p>
+            </div>
           </div>
-        </div> 
-      </div>
-      <div class="judges">
-    <div class="judge">
-      <div class="judge-image">
-          <img src="./assets/images/judge-placeholder.svg" class="judge-background" alt="Judge">
-          <img src="./assets/images/balaena-liana.png" class="judge-profile" alt="Judge">
-      </div>
-      <div class="judge-info">
-          <h3 class="judge-name">Liana Ling</h3>
-          <p>Head of Balaena Quant's Algorithmic Trading Campus<br>+6017-280 1215</p>
-      </div>
-    </div>      
-    <div class="judge">
-      <div class="judge-image">
-          <img src="./assets/images/judge-placeholder.svg" class="judge-background" alt="Judge">
-          <img src="./assets/images/balaena-marcuslee.png" class="judge-profile" alt="Judge">
-      </div>
-      <div class="judge-info">
-          <h3 class="judge-name">Liana Ling</h3>
-          <p>Head of the Department of Quantitative Development<br>+6016 306 6883</p>
-      </div>
-    </div>
-    <div class="judge">
-      <div class="judge-image">
-          <img src="./assets/images/judge-placeholder.svg" class="judge-background" alt="Judge">
-          <img src="./assets/images/balaena-ngjunhan.png" class="judge-profile" alt="Judge">
-      </div>
-      <div class="judge-info">
-          <h3 class="judge-name">Ng Jun Han</h3>
-          <p>Researcher for Machine Learning in Alpha Development<br>+6011 6290 1803</p>
-      </div>
-    </div>
-      </div>
-      <div class="judges">
-        <div class="judge">
-          <div class="judge-image">
-              <img src="./assets/images/judge-placeholder.svg" class="judge-background" alt="Judge">
-              <img src="./assets/images/balaena-liana.png" class="judge-profile" alt="Judge">
+        </div> -->
+
+        <!-- ========================================= External =========================================-->
+        <!-- <div class="judges">
+          <div class="judge">
+            <div class="judge-image">
+                <img src="./assets/images/judge-placeholder.svg" class="judge-background" alt="Judge">
+                <!-- <img src="./assets/images/balaena-liana.png" class="judge-profile" alt="Judge"> --
+            </div>
+            <div class="judge-info">
+                <h3 class="judge-name">Chin Zhie Lun</h3>
+                <!-- <p>Head of Balaena Quant's Algorithmic Trading Campus<br>+6017-280 1215</p> --
+            </div>
+          </div>      
+          <div class="judge">
+            <div class="judge-image">
+                <img src="./assets/images/judge-placeholder.svg" class="judge-background" alt="Judge">
+                <!-- <img src="./assets/images/balaena-marcuslee.png" class="judge-profile" alt="Judge"> --
+            </div>
+            <div class="judge-info">
+                <h3 class="judge-name">Nurliyana Binti Roslan</h3>
+                <!-- <p>Head of the Department of Quantitative Development<br>+6016 306 6883</p> --
+            </div>
           </div>
-          <div class="judge-info">
-              <h3 class="judge-name">Liana Ling</h3>
-              <p>Head of Balaena Quant's Algorithmic Trading Campus<br>+6017-280 1215</p>
-          </div>
-        </div>      
-        <div class="judge">
-          <div class="judge-image">
-              <img src="./assets/images/judge-placeholder.svg" class="judge-background" alt="Judge">
-              <img src="./assets/images/balaena-marcuslee.png" class="judge-profile" alt="Judge">
-          </div>
-          <div class="judge-info">
-              <h3 class="judge-name">Liana Ling</h3>
-              <p>Head of the Department of Quantitative Development<br>+6016 306 6883</p>
+          <div class="judge">
+            <div class="judge-image">
+                <img src="./assets/images/judge-placeholder.svg" class="judge-background" alt="Judge">
+                <!-- <img src="./assets/images/balaena-ngjunhan.png" class="judge-profile" alt="Judge"> --
+            </div>
+            <div class="judge-info">
+                <h3 class="judge-name">Ts. Asadullah Qamar Bhatti</h3>
+                <!-- <p>Researcher for Machine Learning in Alpha Development<br>+6011 6290 1803</p> --
+            </div>
           </div>
         </div>
-        <div class="judge">
-          <div class="judge-image">
-              <img src="./assets/images/judge-placeholder.svg" class="judge-background" alt="Judge">
-              <img src="./assets/images/balaena-ngjunhan.png" class="judge-profile" alt="Judge">
+        <div class="judges">
+          <div class="judge">
+            <div class="judge-image">
+                <img src="./assets/images/judge-placeholder.svg" class="judge-background" alt="Judge">
+                <!-- <img src="./assets/images/balaena-liana.png" class="judge-profile" alt="Judge"> --
+            </div>
+            <div class="judge-info">
+                <h3 class="judge-name">Tan Guang Yi</h3>
+                <!-- <p>Head of Balaena Quant's Algorithmic Trading Campus<br>+6017-280 1215</p> --
+            </div>
+          </div>      
+          <div class="judge">
+            <div class="judge-image">
+                <img src="./assets/images/judge-placeholder.svg" class="judge-background" alt="Judge">
+                <!-- <img src="./assets/images/balaena-marcuslee.png" class="judge-profile" alt="Judge"> --
+            </div>
+            <div class="judge-info">
+                <h3 class="judge-name">Darveen Vijayan</h3>
+                <!-- <p>Head of the Department of Quantitative Development<br>+6016 306 6883</p> --
+            </div>
           </div>
-          <div class="judge-info">
-              <h3 class="judge-name">Ng Jun Han</h3>
-              <p>Researcher for Machine Learning in Alpha Development<br>+6011 6290 1803</p>
-          </div>
-        </div>
-      </div> -->
+          
+        </div> -->
       </div>
       </section>
 
