--- a/mentors.html
+++ b/mentors.html
@@ -71,38 +71,75 @@
           </h2>
         </div>
       </div>
-      <div class="judges">
-        <div class="judge">
-          <div class="judge-image">
-              <img src="./assets/images/judge-placeholder.svg" class="judge-background" alt="Judge">
-              <img src="./assets/images/balaena-liana.png" class="judge-profile" alt="Judge">
+        <!-- ========================================== BQ =========================================-->
+        <div class="judges">
+          <div class="judge">
+            <div class="judge-image">
+                <img src="./assets/images/judge-placeholder.svg" class="judge-background" alt="Judge">
+                <img src="./assets/images/balaena-liana.png" class="judge-profile" alt="Judge">
+            </div>
+            <div class="judge-info">
+                <h3 class="judge-name">Liana Ling</h3>
+                <p>Head of Balaena Quant's Algorithmic Trading Campus<br>+6017-280 1215</p>
+            </div>
+          </div>      
+          <div class="judge">
+            <div class="judge-image">
+                <img src="./assets/images/judge-placeholder.svg" class="judge-background" alt="Judge">
+                <img src="./assets/images/balaena-marcuslee.png" class="judge-profile" alt="Judge">
+            </div>
+            <div class="judge-info">
+                <h3 class="judge-name">Marcus Lee</h3>
+                <p>Head of the Department of Quantitative Development<br>+6016 306 6883</p>
+            </div>
           </div>
-          <div class="judge-info">
-              <h3 class="judge-name">Liana Ling</h3>
-              <p>Head of Balaena Quant's Algorithmic Trading Campus<br>+6017-280 1215</p>
-          </div>
-        </div>      
-        <div class="judge">
-          <div class="judge-image">
-              <img src="./assets/images/judge-placeholder.svg" class="judge-background" alt="Judge">
-              <img src="./assets/images/balaena-marcuslee.png" class="judge-profile" alt="Judge">
-          </div>
-          <div class="judge-info">
-              <h3 class="judge-name">Marcus Lee</h3>
-              <p>Head of the Department of Quantitative Development<br>+6016 306 6883</p>
+          <div class="judge">
+            <div class="judge-image">
+                <img src="./assets/images/judge-placeholder.svg" class="judge-background" alt="Judge">
+                <img src="./assets/images/balaena-ngjunhan.png" class="judge-profile" alt="Judge">
+            </div>
+            <div class="judge-info">
+                <h3 class="judge-name">Ng Jun Han</h3>
+                <p>Researcher for Machine Learning in Alpha Development<br>+6011 6290 1803</p>
+            </div>
           </div>
         </div>
-        <div class="judge">
-          <div class="judge-image">
-              <img src="./assets/images/judge-placeholder.svg" class="judge-background" alt="Judge">
-              <img src="./assets/images/balaena-ngjunhan.png" class="judge-profile" alt="Judge">
+
+        <!-- ========================================== Etiqa =========================================-->
+        <div class="judges">
+          <div class="judge">
+            <div class="judge-image">
+                <img src="./assets/images/judge-placeholder.svg" class="judge-background" alt="Judge">
+                <img src="./assets/images/etiqa-Cheah Tze Chiat.jpg" class="judge-profile" alt="Judge">
+            </div>
+            <div class="judge-info">
+                <h3 class="judge-name">Cheah Tze Chiat</h3>
+                <p>Tech Lead Front End Dev Apps<br>012-5380882</p>
+            </div>
+          </div>      
+          <div class="judge">
+            <div class="judge-image">
+                <img src="./assets/images/judge-placeholder.svg" class="judge-background" alt="Judge">
+                <img src="./assets/images/etiqa-Amiza Binti Mohd Zarawi.jpg" class="judge-profile" alt="Judge">
+            </div>
+            <div class="judge-info">
+                <h3 class="judge-name">Amiza Binti Mohd Zarawi</h3>
+                <p>Tech Lead Front End Dev Apps<br>013-3885258</p>
+            </div>
           </div>
-          <div class="judge-info">
-              <h3 class="judge-name">Ng Jun Han</h3>
-              <p>Researcher for Machine Learning in Alpha Development<br>+6011 6290 1803</p>
+          <div class="judge">
+            <div class="judge-image">
+                <img src="./assets/images/judge-placeholder.svg" class="judge-background" alt="Judge">
+                <img src="./assets/images/etiqa-Tan Chee Kong.jpg" class="judge-profile" alt="Judge">
+            </div>
+            <div class="judge-info">
+                <h3 class="judge-name">Tan Chee Kong</h3>
+                <p>Tech Lead Front End Dev Apps<br>017-6837183</p>
+            </div>
           </div>
         </div>
-      </div>
+
+      
       </div>
       </section>
 
