--- a/judges.html
+++ b/judges.html
@@ -81,32 +81,32 @@
         <div class="judges">
           <div class="judge">
             <div class="judge-image">
-                <img src="./assets/images/judge-placeholder.svg" class="judge-background" alt="Judge">
+                <img src="./assets/images/mentor-placeholder.svg" class="judge-background" alt="Judge">
                 <img src="./assets/images/balaena-liana.png" class="judge-profile" alt="Judge">
             </div>
             <div class="judge-info">
                 <h3 class="judge-name">Liana Ling</h3>
-                <p>Head of Balaena Quant's Algorithmic Trading Campus<br>017-280 1215</p>
+                <p>Head of Balaena Quant's Algorithmic Trading Campus</p>
             </div>
           </div>      
           <div class="judge">
             <div class="judge-image">
-                <img src="./assets/images/judge-placeholder.svg" class="judge-background" alt="Judge">
+                <img src="./assets/images/mentor-placeholder.svg" class="judge-background" alt="Judge">
                 <img src="./assets/images/balaena-marcuslee.png" class="judge-profile" alt="Judge">
             </div>
             <div class="judge-info">
                 <h3 class="judge-name">Marcus Lee</h3>
-                <p>Head of the Department of Quantitative Development<br>016 306 6883</p>
+                <p>Head of the Department of Quantitative Development</p>
             </div>
           </div>
           <div class="judge">
             <div class="judge-image">
-                <img src="./assets/images/judge-placeholder.svg" class="judge-background" alt="Judge">
+                <img src="./assets/images/mentor-placeholder.svg" class="judge-background" alt="Judge">
                 <img src="./assets/images/balaena-ngjunhan.png" class="judge-profile" alt="Judge">
             </div>
             <div class="judge-info">
                 <h3 class="judge-name">Ng Jun Han</h3>
-                <p>Researcher for Machine Learning in Alpha Development<br>011 6290 1803</p>
+                <p>Researcher for Machine Learning in Alpha Development</p>
             </div>
           </div>
         </div>
@@ -149,32 +149,32 @@
         <div class="judges">
       <div class="judge">
         <div class="judge-image">
-            <img src="./assets/images/judge-placeholder.svg" class="judge-background" alt="Judge">
+            <img src="./assets/images/mentor-placeholder.svg" class="judge-background" alt="Judge">
             <img src="./assets/images/etiqa-Tan Wey Yang.jpg" class="judge-profile" alt="Judge">
         </div>
         <div class="judge-info">
             <h3 class="judge-name">Tan Wey Yang</h3>
-            <p>Tech Lead DotNet Dev<br>016-3132316</p>
+            <p>Tech Lead DotNet Dev</p>
         </div>
       </div>      
       <div class="judge">
         <div class="judge-image">
-            <img src="./assets/images/judge-placeholder.svg" class="judge-background" alt="Judge">
+            <img src="./assets/images/mentor-placeholder.svg" class="judge-background" alt="Judge">
             <img src="./assets/images/etiqa-Huzaifah Bin Dzulkifli.jpeg" class="judge-profile" alt="Judge">
         </div>
         <div class="judge-info">
             <h3 class="judge-name">Huzaifah Bin Dzulkifli</h3>
-            <p>Tech Lead DotNet Dev<br>016-5043781</p>
+            <p>Tech Lead DotNet Dev</p>
         </div>
       </div>
       <div class="judge">
         <div class="judge-image">
-            <img src="./assets/images/judge-placeholder.svg" class="judge-background" alt="Judge">
+            <img src="./assets/images/mentor-placeholder.svg" class="judge-background" alt="Judge">
             <img src="./assets/images/etiqa-Loo Kean Seng.png" class="judge-profile" alt="Judge">
         </div>
         <div class="judge-info">
             <h3 class="judge-name">Loo Kean Seng</h3>
-            <p>Tech Lead Java Dev<br>012-4399278</p>
+            <p>Tech Lead Java Dev</p>
         </div>
       </div>
         </div>
